Fix buttons overflow to the bottom in Add widgets modal

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -338,11 +338,6 @@ a:hover {
   max-height: none;
 }
 
-.addWidgetModal {
-  max-height: 600px;
-  padding: 14px;
-}
-
 .loginContainer {
     margin: auto;
     width: 350px;
